welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: ';' expected but 'return' found.
 }return vert
  ^